# polkadot-creative-identity

./: .gitignore  Cargo.toml  IMPLEMENTATION_REPORT.md  POLKADOT_AI_INTEGRATION.md  POLKADOT_SPECIFIC_IMPLEMENTATION_REPORT.md  POLKADOT_SPECIFIC_README.md  README.md  TECHNICAL_ARCHITECTURE.md  build-polkadot-grant.sh  package.json
config/: near-contracts.env
polkadot-client/: Cargo.toml
polkadot-client/src/: emotional_bridge.rs
polkadot-deployments/: deployment-summary.md
polkadot-deployments/emotional_bridge/: Cargo.toml  lib.rs
scripts/: deploy-polkadot-rococo-final.sh  deploy-polkadot-rococo.sh  deploy-polkadot-westend.sh
src/: extrinsics.rs
src/polkadot-client/: Cargo.toml  build.sh
src/polkadot-client/src/: emotional_bridge.rs  extrinsics.rs  lib.rs  soulbound.rs  xcm_messaging.rs
src/utils/: polkadot-ai-bridge.ts  polkadot-ai-examples.js  polkadot-client-working.ts  polkadot-client.ts
test-website/: index.html
