[package]
name = "polkadot-creative-identity"
version = "0.1.0"
edition = "2021"
description = "Polkadot creative identity platform with AI-enhanced soulbound NFTs and cross-chain messaging"
authors = ["Dr. Kapil Bambardekar <kapil.bambardekar@gmail.com>", "Grigori Korotkikh <vdmo@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/compiling-org/polkadot-creative-identity"
homepage = "https://compiling-org.netlify.app"
keywords = ["polkadot", "blockchain", "identity", "soulbound", "cross-chain"]
categories = ["cryptography", "web-programming", "api-bindings"]

[workspace]
members = [
    "src/polkadot-client",
]

[dependencies]
# Core creative data processing
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Web and graphics
wgpu = "0.19"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"

# Polkadot/Substrate
subxt = "0.28"

[features]
default = ["polkadot-client"]
polkadot-client = []

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.dev]
overflow-checks = true
