[package]
name = "polkadot-client"
version = "0.1.0"
edition = "2021"
description = "Polkadot client for creative NFT metadata and cross-chain bridging"
authors = ["Dr. Kapil Bambardekar <kapil.bambardekar@gmail.com>", "Grigori Korotkikh <vdmo@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/compiling-org/nft-blockchain-interactive"
homepage = "https://compiling-org.netlify.app"

[dependencies]
subxt = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
sp-core = "21.0"
sp-runtime = "24.0"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }