[package]
name = "emotional_bridge"
version = "0.1.0"
edition = "2021"
authors = ["Dr. Kapil Bambardekar <kapil.bambardekar@gmail.com>", "Grigori Korotkikh <vdmo@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Emotional Bridge ink! smart contract for Polkadot Rococo testnet"

[workspace]

[dependencies]
ink_lang = { version = "3.4.0", default-features = false }
ink_storage = { version = "3.4.0", default-features = false }
ink_env = { version = "3.4.0", default-features = false }
ink_primitives = { version = "3.4.0", default-features = false }
ink_metadata = { version = "3.4.0", default-features = false, optional = true }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

[lib]
name = "emotional_bridge"
path = "lib.rs"
crate-type = [
    "cdylib",
]

[features]
default = ["std"]
std = [
    "ink_lang/std",
    "ink_storage/std",
    "ink_env/std",
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []

[profile.release]
overflow-checks = false

[profile.dev]
overflow-checks = false